# my-cpp-engine

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: engine.cpp  log.cpp  log.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/shaders/fragments/: simple.frag
src/shaders/vertex/: simple.vert
